--- a/All Projects/Profile Card/style.css
+++ b/All Projects/Profile Card/style.css
@@ -25,18 +25,35 @@ body{
     background: rgba(255, 255, 255, 0.4);
     backdrop-filter: blur(20px);
     border-radius: 16px;
-    border: 6px solid #7E22CE;
+    /* outline: 8px solid #7E22CE; */
+    outline: 14px groove #7E22CE;
+    position: relative; 
 }
 
 .img-box{
-    width: 130px;
-    height: 130px;
+    width: 135px;
+    height: 135px;
     background-color: white;
     border-radius: 50%;
-    border: 6px solid rgba(255, 255, 255, 0.034);
+    border: 6px groove rgba(255, 255, 255, 0.034);
     overflow: hidden;
     margin: 40px 0 15px 0;
-    
+    transition: all 0.3s ease-in-out;
+}
+
+.img-box:hover{
+    transform: scale(1.03);
+    transition: all 0.3s ease-in-out;
+}
+
+.status{
+    width: 17px;
+    height: 17px;
+    background-color: rgb(0, 148, 0);
+    border-radius: 50%;
+    position: absolute;
+    top: 30%;
+    right: 29%;
 }
 
 .img-box img{
@@ -71,6 +88,11 @@ small{
     border: 4px solid white;
     border-radius: 50%;
 }
+
+.box:hover{
+    transform: scale(1.05);
+}
+
 .box i{
     color: darkblue;
     font-size: 18px;
