--- a/All Projects/Profile Card/style.css
+++ b/All Projects/Profile Card/style.css
@@ -35,10 +35,16 @@ body{
     height: 135px;
     background-color: white;
     border-radius: 50%;
-    border: 6px groove rgba(255, 255, 255, 0.034);
+    border: 6px solid white;
     overflow: hidden;
     margin: 40px 0 15px 0;
     transition: all 0.3s ease-in-out;
+}
+
+.img-box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .img-box:hover{
@@ -54,12 +60,6 @@ body{
     position: absolute;
     top: 30%;
     right: 29%;
-}
-
-.img-box img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 h1{
@@ -142,5 +142,5 @@ small{
 
 .scroll-btn .button a{
     padding: 5px;
-    border: 2px solid;
+    border: 2px solid white;
 }
